# KNNcalibrator

./: README.md  dgm.py  knn.py  knn_examples1_QuadraticFun.ipynb  knn_examples1_QuadraticFun_adaptive.ipynb  knn_examples2_AIRMOD.ipynb  knn_examples3_Energy.ipynb  plotting.py  pre-commit-config.yaml  pyproject.toml  requirements.txt
examples/: design_of_experiment.ipynb  knn_examples1_QuadraticFun.ipynb  knn_examples1_QuadraticFun_adaptive.ipynb  knn_examples2_AIRMOD.ipynb  knn_examples3_Energy.ipynb
resources/AIRMODE/: airmod_io_meta.json  load_helpers.py  train_surrogate.py
resources/OTHERS/: models.py
src/: backward.py  dgm.py  doe.py  forward.py  knn.py  plotting.py  simulator.py  uncmodel.py
